diagnosis template save to local from online
And some other bug fix

--- a/Healthtechbd/AddDiagnosisTemplate.xaml
+++ b/Healthtechbd/AddDiagnosisTemplate.xaml
@@ -80,7 +80,7 @@
                                 </Grid>
                             </StackPanel>
 
-                            <TextBox x:Name="DiagnosisTemplateId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
+                            <TextBox x:Name="diagnosis_template_id" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
 
                         </Grid>
                     </Border>
