--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -53,17 +53,17 @@
                                     <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
                                 <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
 
-                                <!--<DataGridTemplateColumn>
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
                                             <Button ToolTip="Edit" x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPrescriptionRow_Click"  >
-                                                    <materialDesign:PackIcon Kind="TableEdit"/>
-                                                </Button>
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>-->
+                                                <materialDesign:PackIcon Kind="TableEdit"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
 
-                                    <DataGridTemplateColumn Header="Action"> 
+                                <DataGridTemplateColumn Header="Action"> 
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <Button ToolTip="View" x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
