--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -53,7 +53,7 @@
                                     <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
                                 <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
 
-                                <DataGridTemplateColumn>
+                                <!--<DataGridTemplateColumn Header="Action">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <Button ToolTip="Edit" x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPrescriptionRow_Click"  >
@@ -61,17 +61,17 @@
                                             </Button>
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
+                                </DataGridTemplateColumn>-->
 
                                 <DataGridTemplateColumn Header="Action"> 
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <Button ToolTip="View" x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
-                                                    <materialDesign:PackIcon Kind="Eye"/>
-                                                </Button>
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button ToolTip="View" x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
+                                                <materialDesign:PackIcon Kind="Eye"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
 
                                 <DataGridTemplateColumn>
                                     <DataGridTemplateColumn.CellTemplate>
